--- a/docs/json/packages/com.jakeashacks.timetounlock.json
+++ b/docs/json/packages/com.jakeashacks.timetounlock.json
@@ -98,6 +98,37 @@
           "arch32": false
         }
       ]
+    },
+    {
+      "tweakVersion": "1.0.1",
+      "iOSVersion": "11.2.5",
+      "repository": "BigBoss",
+      "date": "2018-07-11T00:24:00Z",
+      "outcome": {
+        "calculatedStatus": "Working",
+        "percentage": 100,
+        "good": 1,
+        "bad": 0,
+        "total": 1,
+        "arch32": {
+          "total": 0,
+          "good": 0,
+          "bad": 0,
+          "percentage": 0,
+          "calculatedStatus": "Unknown"
+        }
+      },
+      "users": [
+        {
+          "status": "partial",
+          "device": "iPhone8,1",
+          "issues": "If you use simpleLS don’t enable “always show time” or you will have no clock on your lock screen",
+          "date": "2018-07-11T00:24:00Z",
+          "userName": "LiftedBeatsYT",
+          "issueNumber": 21367,
+          "arch32": false
+        }
+      ]
     }
   ]
 }
