--- a/docs/json/packages/com.linusyang.appinst.json
+++ b/docs/json/packages/com.linusyang.appinst.json
@@ -245,10 +245,10 @@
       "date": "2018-07-07T20:23:58Z",
       "outcome": {
         "calculatedStatus": "Not working",
-        "percentage": 40,
+        "percentage": 33,
         "good": 2,
         "bad": 0,
-        "total": 5,
+        "total": 6,
         "arch32": {
           "total": 0,
           "good": 0,
@@ -301,6 +301,15 @@
           "date": "2018-07-10T17:54:56Z",
           "userName": "gideontong",
           "issueNumber": 20853,
+          "arch32": false
+        },
+        {
+          "status": "not working",
+          "device": "iPhone10,1",
+          "issues": "",
+          "date": "2018-07-11T01:02:10Z",
+          "userName": "jbrev",
+          "issueNumber": 21401,
           "arch32": false
         }
       ]
