--- a/docs/json/packages/com.lnx.aerify.json
+++ b/docs/json/packages/com.lnx.aerify.json
@@ -861,9 +861,9 @@
       "outcome": {
         "calculatedStatus": "Working",
         "percentage": 100,
-        "good": 68,
+        "good": 69,
         "bad": 0,
-        "total": 68,
+        "total": 69,
         "arch32": {
           "total": 0,
           "good": 0,
@@ -1483,6 +1483,15 @@
           "date": "2018-07-10T21:53:48Z",
           "userName": "lewii0701",
           "issueNumber": 21150,
+          "arch32": false
+        },
+        {
+          "status": "working",
+          "device": "iPhone10,5",
+          "issues": "",
+          "date": "2018-07-11T01:26:08Z",
+          "userName": "Theos-1",
+          "issueNumber": 21412,
           "arch32": false
         }
       ]
