--- a/docs/json/packages/com.unlimapps.gramplus.json
+++ b/docs/json/packages/com.unlimapps.gramplus.json
@@ -1137,11 +1137,11 @@
       "repository": "beta.unlimapps.com",
       "date": "2018-07-10T21:53:24Z",
       "outcome": {
-        "calculatedStatus": "Working",
-        "percentage": 100,
+        "calculatedStatus": "Likely working",
+        "percentage": 66,
         "good": 2,
         "bad": 0,
-        "total": 2,
+        "total": 3,
         "arch32": {
           "total": 0,
           "good": 0,
@@ -1167,6 +1167,15 @@
           "date": "2018-07-11T00:08:39Z",
           "userName": "seyko1905",
           "issueNumber": 21338,
+          "arch32": false
+        },
+        {
+          "status": "not working",
+          "device": "iPhone8,2",
+          "issues": "Media download fails",
+          "date": "2018-07-11T01:32:56Z",
+          "userName": "Marsinator",
+          "issueNumber": 21429,
           "arch32": false
         }
       ]
