--- a/docs/json/packages/applist.json
+++ b/docs/json/packages/applist.json
@@ -1104,9 +1104,9 @@
       "outcome": {
         "calculatedStatus": "Working",
         "percentage": 100,
-        "good": 19,
+        "good": 20,
         "bad": 0,
-        "total": 19,
+        "total": 20,
         "arch32": {
           "total": 0,
           "good": 0,
@@ -1285,6 +1285,15 @@
           "date": "2018-07-10T18:01:45Z",
           "userName": "johntsegaye",
           "issueNumber": 20886,
+          "arch32": false
+        },
+        {
+          "status": "working",
+          "device": "iPhone8,1",
+          "issues": "",
+          "date": "2018-07-11T01:32:14Z",
+          "userName": "jhou322",
+          "issueNumber": 21426,
           "arch32": false
         }
       ]
