--- a/docs/json/packages/com.unlimapps.twitterpp.json
+++ b/docs/json/packages/com.unlimapps.twitterpp.json
@@ -1,10 +1,10 @@
 {
   "id": "com.unlimapps.twitterpp",
   "name": "Twitter ++",
-  "latest": "1.2r-50",
+  "latest": "1.2r-76",
   "repository": "beta.unlimapps.com",
   "url": "http://beta.unlimapps.com/",
-  "shortDescription": "sharing options, long tweets and much more!",
+  "shortDescription": "The Twitter tweak that give you more sharing options, long tweets and much more!",
   "category": "Tweaks",
   "author": "UnlimApps Inc",
   "commercial": false,
@@ -369,11 +369,11 @@
       "repository": "beta.unlimapps.com",
       "date": "2018-07-10T17:31:12Z",
       "outcome": {
-        "calculatedStatus": "Working",
-        "percentage": 100,
+        "calculatedStatus": "Likely working",
+        "percentage": 50,
         "good": 1,
         "bad": 0,
-        "total": 1,
+        "total": 2,
         "arch32": {
           "total": 0,
           "good": 0,
@@ -390,6 +390,15 @@
           "date": "2018-07-10T17:31:12Z",
           "userName": "jimohib",
           "issueNumber": 20833,
+          "arch32": false
+        },
+        {
+          "status": "not working",
+          "device": "iPhone10,3",
+          "issues": "",
+          "date": "2018-07-11T01:40:42Z",
+          "userName": "sumitx",
+          "issueNumber": 21448,
           "arch32": false
         }
       ]
