--- a/docs/json/packages/applebetas.ios.tweak.translucentmessages.json
+++ b/docs/json/packages/applebetas.ios.tweak.translucentmessages.json
@@ -351,7 +351,7 @@
         "percentage": 0,
         "good": 0,
         "bad": 0,
-        "total": 1,
+        "total": 2,
         "arch32": {
           "total": 0,
           "good": 0,
@@ -368,6 +368,15 @@
           "date": "2018-07-10T21:31:10Z",
           "userName": "Forestpupoozzle",
           "issueNumber": 21108,
+          "arch32": false
+        },
+        {
+          "status": "not working",
+          "device": "iPhone9,3",
+          "issues": "",
+          "date": "2018-07-11T01:39:58Z",
+          "userName": "cokefishcola",
+          "issueNumber": 21445,
           "arch32": false
         }
       ]
