--- a/docs/json/packages/com.imkpatil.letmeknow.json
+++ b/docs/json/packages/com.imkpatil.letmeknow.json
@@ -419,9 +419,9 @@
       "outcome": {
         "calculatedStatus": "Working",
         "percentage": 100,
-        "good": 9,
+        "good": 10,
         "bad": 0,
-        "total": 9,
+        "total": 10,
         "arch32": {
           "total": 0,
           "good": 0,
@@ -510,6 +510,15 @@
           "date": "2018-07-10T09:13:43Z",
           "userName": "guoqiyun",
           "issueNumber": 20350,
+          "arch32": false
+        },
+        {
+          "status": "working",
+          "device": "iPhone8,1",
+          "issues": "",
+          "date": "2018-07-11T01:39:23Z",
+          "userName": "jhou322",
+          "issueNumber": 21444,
           "arch32": false
         }
       ]
