--- a/docs/json/packages/com.unlimapps.uaupdatetools.json
+++ b/docs/json/packages/com.unlimapps.uaupdatetools.json
@@ -1,7 +1,7 @@
 {
   "id": "com.unlimapps.uaupdatetools",
   "name": "App Admin",
-  "latest": "1.0r-71",
+  "latest": "1.0r-88",
   "repository": "beta.unlimapps.com",
   "url": "https://beta.unlimapps.com/",
   "shortDescription": "Downgrade iOS apps to any previous version! No AppSync needed!!!",
@@ -959,6 +959,37 @@
           "date": "2018-07-20T14:30:07Z",
           "userName": "Tyler1204",
           "issueNumber": 30503,
+          "arch32": false
+        }
+      ]
+    },
+    {
+      "tweakVersion": "1.0r-88",
+      "iOSVersion": "11.3.1",
+      "repository": "test.unlimapps.com",
+      "date": "2018-07-23T02:34:28Z",
+      "outcome": {
+        "calculatedStatus": "Working",
+        "percentage": 100,
+        "good": 1,
+        "bad": 0,
+        "total": 1,
+        "arch32": {
+          "total": 0,
+          "good": 0,
+          "bad": 0,
+          "percentage": 0,
+          "calculatedStatus": "Unknown"
+        }
+      },
+      "users": [
+        {
+          "status": "working",
+          "device": "iPhone8,2",
+          "issues": "Literally used it one time to download the proper version of YouTube for CerCube. It worked so yes this tweak is working ",
+          "date": "2018-07-23T02:34:28Z",
+          "userName": "Jason6189",
+          "issueNumber": 32525,
           "arch32": false
         }
       ]
