--- a/docs/json/packages/com.unlimapps.uaupdatetools.json
+++ b/docs/json/packages/com.unlimapps.uaupdatetools.json
@@ -971,9 +971,9 @@
       "outcome": {
         "calculatedStatus": "Working",
         "percentage": 100,
-        "good": 1,
+        "good": 2,
         "bad": 0,
-        "total": 1,
+        "total": 2,
         "arch32": {
           "total": 0,
           "good": 0,
@@ -990,6 +990,15 @@
           "date": "2018-07-23T02:34:28Z",
           "userName": "Jason6189",
           "issueNumber": 32525,
+          "arch32": false
+        },
+        {
+          "status": "working",
+          "device": "iPhone9,4",
+          "issues": "",
+          "date": "2018-07-23T02:09:12Z",
+          "userName": "Ar0ing",
+          "issueNumber": 32500,
           "arch32": false
         }
       ]
