--- a/docs/json/packages/com.unlimapps.uaupdatetools.json
+++ b/docs/json/packages/com.unlimapps.uaupdatetools.json
@@ -971,9 +971,9 @@
       "outcome": {
         "calculatedStatus": "Working",
         "percentage": 100,
-        "good": 2,
+        "good": 3,
         "bad": 0,
-        "total": 2,
+        "total": 3,
         "arch32": {
           "total": 0,
           "good": 0,
@@ -999,6 +999,15 @@
           "date": "2018-07-23T02:09:12Z",
           "userName": "Ar0ing",
           "issueNumber": 32500,
+          "arch32": false
+        },
+        {
+          "status": "working",
+          "device": "iPhone10,3",
+          "issues": "",
+          "date": "2018-07-23T02:01:07Z",
+          "userName": "fkoki1218",
+          "issueNumber": 32497,
           "arch32": false
         }
       ]
