--- a/docs/json/packages/com.lnx.showtouch.json
+++ b/docs/json/packages/com.lnx.showtouch.json
@@ -1,7 +1,7 @@
 {
   "id": "com.lnx.showtouch",
   "name": "ShowTouch",
-  "latest": "1.0.3",
+  "latest": "1.0.3-1",
   "repository": "LonestarX's repo",
   "url": "http://cydia.saurik.com/package/com.lnx.showtouch/",
   "shortDescription": "Shows where you touch the screen",
@@ -241,9 +241,9 @@
       "outcome": {
         "calculatedStatus": "Working",
         "percentage": 100,
-        "good": 1,
+        "good": 2,
         "bad": 0,
-        "total": 1,
+        "total": 2,
         "arch32": {
           "total": 0,
           "good": 0,
@@ -260,6 +260,15 @@
           "date": "2018-07-20T23:22:40Z",
           "userName": "iTollMouS",
           "issueNumber": 30761,
+          "arch32": false
+        },
+        {
+          "status": "working",
+          "device": "iPhone10,6",
+          "issues": "",
+          "date": "2018-07-23T01:49:57Z",
+          "userName": "Nawaf-NM",
+          "issueNumber": 32466,
           "arch32": false
         }
       ]
