--- a/docs/json/packages/com.cokepokes.appstoreplusplus.json
+++ b/docs/json/packages/com.cokepokes.appstoreplusplus.json
@@ -18,9 +18,9 @@
       "outcome": {
         "calculatedStatus": "Working",
         "percentage": 100,
-        "good": 1,
+        "good": 2,
         "bad": 0,
-        "total": 1,
+        "total": 2,
         "arch32": {
           "total": 0,
           "good": 0,
@@ -37,6 +37,15 @@
           "date": "2018-07-23T02:27:18Z",
           "userName": "madTRiiKs",
           "issueNumber": 32516,
+          "arch32": false
+        },
+        {
+          "status": "working",
+          "device": "iPhone8,1",
+          "issues": "",
+          "date": "2018-07-23T00:16:35Z",
+          "userName": "port87",
+          "issueNumber": 32418,
           "arch32": false
         }
       ]
