--- a/docs/json/packages/com.unlimapps.uaupdatetools.json
+++ b/docs/json/packages/com.unlimapps.uaupdatetools.json
@@ -971,9 +971,9 @@
       "outcome": {
         "calculatedStatus": "Working",
         "percentage": 100,
-        "good": 3,
+        "good": 4,
         "bad": 0,
-        "total": 3,
+        "total": 4,
         "arch32": {
           "total": 0,
           "good": 0,
@@ -1008,6 +1008,15 @@
           "date": "2018-07-23T02:01:07Z",
           "userName": "fkoki1218",
           "issueNumber": 32497,
+          "arch32": false
+        },
+        {
+          "status": "working",
+          "device": "iPad7,1",
+          "issues": "works perfectly fine on my iPad pro 12,9 2gen ios 11.3.1",
+          "date": "2018-07-23T00:03:58Z",
+          "userName": "plsdonttakemychickennuggets",
+          "issueNumber": 32405,
           "arch32": false
         }
       ]
