--- a/docs/json/packages/com.ikilledappl3.malipo.json
+++ b/docs/json/packages/com.ikilledappl3.malipo.json
@@ -76,9 +76,9 @@
       "outcome": {
         "calculatedStatus": "Working",
         "percentage": 100,
-        "good": 2,
+        "good": 3,
         "bad": 0,
-        "total": 2,
+        "total": 3,
         "arch32": {
           "total": 0,
           "good": 0,
@@ -104,6 +104,15 @@
           "date": "2018-07-20T23:32:36Z",
           "userName": "rdc74656",
           "issueNumber": 30763,
+          "arch32": false
+        },
+        {
+          "status": "working",
+          "device": "iPhone10,2",
+          "issues": "",
+          "date": "2018-07-22T23:54:18Z",
+          "userName": "seabazzz",
+          "issueNumber": 32402,
           "arch32": false
         }
       ]
