--- a/docs/json/packages/org.thebigboss.appcon.json
+++ b/docs/json/packages/org.thebigboss.appcon.json
@@ -317,10 +317,10 @@
       "date": "2018-07-18T17:11:48Z",
       "outcome": {
         "calculatedStatus": "Likely working",
-        "percentage": 50,
-        "good": 1,
+        "percentage": 66,
+        "good": 2,
         "bad": 0,
-        "total": 2,
+        "total": 3,
         "arch32": {
           "total": 0,
           "good": 0,
@@ -346,6 +346,15 @@
           "date": "2018-07-20T23:57:44Z",
           "userName": "geoffsmile",
           "issueNumber": 30778,
+          "arch32": false
+        },
+        {
+          "status": "working",
+          "device": "iPhone9,2",
+          "issues": "",
+          "date": "2018-07-22T23:00:09Z",
+          "userName": "wherearemylegs",
+          "issueNumber": 32378,
           "arch32": false
         }
       ]
