--- a/docs/json/packages/com.unlimapps.uasharedtools.json
+++ b/docs/json/packages/com.unlimapps.uasharedtools.json
@@ -1,7 +1,7 @@
 {
   "id": "com.unlimapps.uasharedtools",
   "name": "uasharedtools",
-  "latest": "2.2r-59",
+  "latest": "2.2r-60",
   "repository": "beta.unlimapps.com",
   "url": "http://beta.unlimapps.com/",
   "shortDescription": "shared tools for unlimapps tweaks",
@@ -495,6 +495,37 @@
           "date": "2018-07-20T18:21:58Z",
           "userName": "mbf9502",
           "issueNumber": 30618,
+          "arch32": false
+        }
+      ]
+    },
+    {
+      "tweakVersion": "2.2r-60",
+      "iOSVersion": "11.3.1",
+      "repository": "test.unlimapps.com",
+      "date": "2018-07-22T22:18:03Z",
+      "outcome": {
+        "calculatedStatus": "Working",
+        "percentage": 100,
+        "good": 1,
+        "bad": 0,
+        "total": 1,
+        "arch32": {
+          "total": 0,
+          "good": 0,
+          "bad": 0,
+          "percentage": 0,
+          "calculatedStatus": "Unknown"
+        }
+      },
+      "users": [
+        {
+          "status": "working",
+          "device": "iPhone6,2",
+          "issues": "",
+          "date": "2018-07-22T22:18:03Z",
+          "userName": "312rad",
+          "issueNumber": 32354,
           "arch32": false
         }
       ]
