--- a/docs/json/packages/com.eason.carplay.ios11.json
+++ b/docs/json/packages/com.eason.carplay.ios11.json
@@ -375,9 +375,9 @@
       "outcome": {
         "calculatedStatus": "Working",
         "percentage": 100,
-        "good": 2,
+        "good": 3,
         "bad": 0,
-        "total": 2,
+        "total": 3,
         "arch32": {
           "total": 0,
           "good": 0,
@@ -403,6 +403,15 @@
           "date": "2018-07-20T13:52:50Z",
           "userName": "Dcsk8terantz",
           "issueNumber": 30453,
+          "arch32": false
+        },
+        {
+          "status": "working",
+          "device": "iPhone8,2",
+          "issues": "",
+          "date": "2018-07-22T22:00:57Z",
+          "userName": "patilpatil75219",
+          "issueNumber": 32343,
           "arch32": false
         }
       ]
