--- a/docs/json/packages/com.unlimapps.toneenabler.json
+++ b/docs/json/packages/com.unlimapps.toneenabler.json
@@ -4,7 +4,7 @@
   "latest": "1.1r-14",
   "repository": "apt.thebigboss.org",
   "url": "http://cydia.saurik.com/package/com.unlimapps.toneenabler/",
-  "shortDescription": "Restore ringtone folder use on iOS 7/8",
+  "shortDescription": "In iOS 7.x/8.x apple uses a plist in order to load ringtones in settings instead of simply iterating through the /Library/Ringtones directory. This tweak enables the old behavior that was present before 7.x and reads the tones from the directory so tones that you download from cydia or UnlimTones will now show in settings.",
   "category": "Tweaks",
   "author": "UnlimApps Inc.",
   "commercial": false,
@@ -106,10 +106,10 @@
       "date": "2018-07-07T17:09:11Z",
       "outcome": {
         "calculatedStatus": "Working",
-        "percentage": 85,
-        "good": 6,
+        "percentage": 87,
+        "good": 7,
         "bad": 0,
-        "total": 7,
+        "total": 8,
         "arch32": {
           "total": 0,
           "good": 0,
@@ -180,6 +180,15 @@
           "date": "2018-07-13T06:18:41Z",
           "userName": "LegendxCraft",
           "issueNumber": 25017,
+          "arch32": false
+        },
+        {
+          "status": "working",
+          "device": "iPhone10,4",
+          "issues": "",
+          "date": "2018-07-22T21:52:53Z",
+          "userName": "diddlydoowoo",
+          "issueNumber": 32335,
           "arch32": false
         }
       ]
