--- a/docs/json/packages/com.kael.fullscreenx.json
+++ b/docs/json/packages/com.kael.fullscreenx.json
@@ -165,6 +165,37 @@
           "arch32": false
         }
       ]
+    },
+    {
+      "tweakVersion": "1.1",
+      "iOSVersion": "11.4",
+      "repository": "Perry Cucko's Repo",
+      "date": "2018-07-22T20:59:18Z",
+      "outcome": {
+        "calculatedStatus": "Not working",
+        "percentage": 0,
+        "good": 0,
+        "bad": 0,
+        "total": 1,
+        "arch32": {
+          "total": 0,
+          "good": 0,
+          "bad": 0,
+          "percentage": 0,
+          "calculatedStatus": "Unknown"
+        }
+      },
+      "users": [
+        {
+          "status": "not working",
+          "device": "iPhone10,6",
+          "issues": "",
+          "date": "2018-07-22T20:59:18Z",
+          "userName": "danielfreisjr",
+          "issueNumber": 32283,
+          "arch32": false
+        }
+      ]
     }
   ]
 }
