--- a/docs/json/packages/com.unlimapps.uaupdatetools.json
+++ b/docs/json/packages/com.unlimapps.uaupdatetools.json
@@ -971,9 +971,9 @@
       "outcome": {
         "calculatedStatus": "Working",
         "percentage": 100,
-        "good": 4,
+        "good": 5,
         "bad": 0,
-        "total": 4,
+        "total": 5,
         "arch32": {
           "total": 0,
           "good": 0,
@@ -1017,6 +1017,15 @@
           "date": "2018-07-23T00:03:58Z",
           "userName": "plsdonttakemychickennuggets",
           "issueNumber": 32405,
+          "arch32": false
+        },
+        {
+          "status": "partial",
+          "device": "iPhone8,2",
+          "issues": "Actually does allow me to download old versions. You cannot invoke the tweak via your “purchased” apps area. You must do it from “Search”. Press hard on the open/update button and it will show the downgrade option. However, none of the other features work: you cannot “hide” apps you wish to prevent from updating. Developer says he will work on it after weekend of 7-22-18.",
+          "date": "2018-07-22T20:43:19Z",
+          "userName": "XweAponX",
+          "issueNumber": 32275,
           "arch32": false
         }
       ]
