--- a/docs/json/packages/applist.json
+++ b/docs/json/packages/applist.json
@@ -1574,6 +1574,37 @@
           "arch32": true
         }
       ]
+    },
+    {
+      "tweakVersion": "1.5.14",
+      "iOSVersion": "10.3.1",
+      "repository": "BigBoss",
+      "date": "2018-07-22T19:37:50Z",
+      "outcome": {
+        "calculatedStatus": "Working",
+        "percentage": 100,
+        "good": 1,
+        "bad": 0,
+        "total": 1,
+        "arch32": {
+          "total": 0,
+          "good": 0,
+          "bad": 0,
+          "percentage": 0,
+          "calculatedStatus": "Unknown"
+        }
+      },
+      "users": [
+        {
+          "status": "working",
+          "device": "iPad6,4",
+          "issues": "",
+          "date": "2018-07-22T19:37:50Z",
+          "userName": "motoissa",
+          "issueNumber": 32243,
+          "arch32": false
+        }
+      ]
     }
   ]
 }
