--- a/docs/json/packages/com.jake0oo0.appster.json
+++ b/docs/json/packages/com.jake0oo0.appster.json
@@ -181,10 +181,10 @@
       "date": "2018-07-07T21:14:43Z",
       "outcome": {
         "calculatedStatus": "Working",
-        "percentage": 80,
-        "good": 4,
+        "percentage": 83,
+        "good": 5,
         "bad": 0,
-        "total": 5,
+        "total": 6,
         "arch32": {
           "total": 0,
           "good": 0,
@@ -237,6 +237,15 @@
           "date": "2018-07-12T15:33:31Z",
           "userName": "DumbCunt",
           "issueNumber": 24311,
+          "arch32": false
+        },
+        {
+          "status": "working",
+          "device": "iPhone8,2",
+          "issues": "",
+          "date": "2018-07-22T18:07:11Z",
+          "userName": "alexchozet",
+          "issueNumber": 32201,
           "arch32": false
         }
       ]
