--- a/docs/json/packages/com.unlimapps.uaupdatetools.json
+++ b/docs/json/packages/com.unlimapps.uaupdatetools.json
@@ -971,9 +971,9 @@
       "outcome": {
         "calculatedStatus": "Working",
         "percentage": 100,
-        "good": 5,
+        "good": 6,
         "bad": 0,
-        "total": 5,
+        "total": 6,
         "arch32": {
           "total": 0,
           "good": 0,
@@ -1026,6 +1026,15 @@
           "date": "2018-07-22T20:43:19Z",
           "userName": "XweAponX",
           "issueNumber": 32275,
+          "arch32": false
+        },
+        {
+          "status": "working",
+          "device": "iPhone9,4",
+          "issues": "",
+          "date": "2018-07-22T18:02:00Z",
+          "userName": "app4154",
+          "issueNumber": 32190,
           "arch32": false
         }
       ]
