--- a/docs/json/packages/com.unlimapps.twitterpp.json
+++ b/docs/json/packages/com.unlimapps.twitterpp.json
@@ -388,10 +388,10 @@
       "date": "2018-07-10T17:31:12Z",
       "outcome": {
         "calculatedStatus": "Working",
-        "percentage": 77,
-        "good": 7,
+        "percentage": 80,
+        "good": 8,
         "bad": 0,
-        "total": 9,
+        "total": 10,
         "arch32": {
           "total": 0,
           "good": 0,
@@ -480,6 +480,15 @@
           "date": "2018-07-17T23:42:02Z",
           "userName": "MARGELANI",
           "issueNumber": 29004,
+          "arch32": false
+        },
+        {
+          "status": "working",
+          "device": "iPhone8,2",
+          "issues": "",
+          "date": "2018-07-22T17:51:19Z",
+          "userName": "alexchozet",
+          "issueNumber": 32183,
           "arch32": false
         }
       ]
