--- a/docs/json/packages/com.unlimapps.twitchpp.json
+++ b/docs/json/packages/com.unlimapps.twitchpp.json
@@ -79,10 +79,10 @@
       "date": "2018-07-07T22:48:34Z",
       "outcome": {
         "calculatedStatus": "Not working",
-        "percentage": 14,
+        "percentage": 12,
         "good": 1,
         "bad": 0,
-        "total": 7,
+        "total": 8,
         "arch32": {
           "total": 0,
           "good": 0,
@@ -153,6 +153,15 @@
           "date": "2018-07-17T12:54:13Z",
           "userName": "skruffyyy",
           "issueNumber": 28654,
+          "arch32": false
+        },
+        {
+          "status": "not working",
+          "device": "iPhone8,2",
+          "issues": "",
+          "date": "2018-07-22T17:51:11Z",
+          "userName": "alexchozet",
+          "issueNumber": 32182,
           "arch32": false
         }
       ]
