--- a/docs/json/packages/com.unlimapps.uaupdatetools.json
+++ b/docs/json/packages/com.unlimapps.uaupdatetools.json
@@ -971,9 +971,9 @@
       "outcome": {
         "calculatedStatus": "Working",
         "percentage": 100,
-        "good": 6,
+        "good": 7,
         "bad": 0,
-        "total": 6,
+        "total": 7,
         "arch32": {
           "total": 0,
           "good": 0,
@@ -1035,6 +1035,15 @@
           "date": "2018-07-22T18:02:00Z",
           "userName": "app4154",
           "issueNumber": 32190,
+          "arch32": false
+        },
+        {
+          "status": "working",
+          "device": "iPhone8,2",
+          "issues": "",
+          "date": "2018-07-22T16:24:35Z",
+          "userName": "adrianluke",
+          "issueNumber": 32137,
           "arch32": false
         }
       ]
