--- a/docs/json/packages/com.cokepokes.appstoreplusplus.json
+++ b/docs/json/packages/com.cokepokes.appstoreplusplus.json
@@ -16,11 +16,11 @@
       "repository": "cokepokes.github.io",
       "date": "2018-07-23T02:27:18Z",
       "outcome": {
-        "calculatedStatus": "Working",
-        "percentage": 100,
+        "calculatedStatus": "Likely working",
+        "percentage": 66,
         "good": 2,
         "bad": 0,
-        "total": 2,
+        "total": 3,
         "arch32": {
           "total": 0,
           "good": 0,
@@ -46,6 +46,15 @@
           "date": "2018-07-23T00:16:35Z",
           "userName": "port87",
           "issueNumber": 32418,
+          "arch32": false
+        },
+        {
+          "status": "not working",
+          "device": "iPhone6,1",
+          "issues": "",
+          "date": "2018-07-22T15:55:47Z",
+          "userName": "sudeep-08",
+          "issueNumber": 32121,
           "arch32": false
         }
       ]
