--- a/docs/json/packages/com.unlimapps.uaupdatetools.json
+++ b/docs/json/packages/com.unlimapps.uaupdatetools.json
@@ -1,7 +1,7 @@
 {
   "id": "com.unlimapps.uaupdatetools",
   "name": "App Admin",
-  "latest": "1.0r-88",
+  "latest": "1.0r-71",
   "repository": "beta.unlimapps.com",
   "url": "https://beta.unlimapps.com/",
   "shortDescription": "Downgrade iOS apps to any previous version! No AppSync needed!!!",
@@ -634,7 +634,7 @@
         "percentage": 0,
         "good": 0,
         "bad": 0,
-        "total": 14,
+        "total": 15,
         "arch32": {
           "total": 0,
           "good": 0,
@@ -768,6 +768,15 @@
           "date": "2018-07-20T09:17:42Z",
           "userName": "tphrlee",
           "issueNumber": 30394,
+          "arch32": false
+        },
+        {
+          "status": "not working",
+          "device": "iPhone6,1",
+          "issues": "",
+          "date": "2018-07-22T15:45:19Z",
+          "userName": "sudeep-08",
+          "issueNumber": 32103,
           "arch32": false
         }
       ]
