--- a/docs/json/packages/com.unlimapps.uaupdatetools.json
+++ b/docs/json/packages/com.unlimapps.uaupdatetools.json
@@ -1,7 +1,7 @@
 {
   "id": "com.unlimapps.uaupdatetools",
   "name": "App Admin",
-  "latest": "1.0r-71",
+  "latest": "1.0r-88",
   "repository": "beta.unlimapps.com",
   "url": "https://beta.unlimapps.com/",
   "shortDescription": "Downgrade iOS apps to any previous version! No AppSync needed!!!",
@@ -980,9 +980,9 @@
       "outcome": {
         "calculatedStatus": "Working",
         "percentage": 100,
-        "good": 7,
+        "good": 8,
         "bad": 0,
-        "total": 7,
+        "total": 8,
         "arch32": {
           "total": 0,
           "good": 0,
@@ -1053,6 +1053,15 @@
           "date": "2018-07-22T16:24:35Z",
           "userName": "adrianluke",
           "issueNumber": 32137,
+          "arch32": false
+        },
+        {
+          "status": "working",
+          "device": "iPhone9,3",
+          "issues": "",
+          "date": "2018-07-22T15:39:55Z",
+          "userName": "useplusa",
+          "issueNumber": 32102,
           "arch32": false
         }
       ]
