--- a/docs/json/packages/com.jakeashacks.realcc.json
+++ b/docs/json/packages/com.jakeashacks.realcc.json
@@ -85,9 +85,9 @@
       "outcome": {
         "calculatedStatus": "Working",
         "percentage": 100,
-        "good": 32,
+        "good": 33,
         "bad": 0,
-        "total": 32,
+        "total": 33,
         "arch32": {
           "total": 0,
           "good": 0,
@@ -383,6 +383,15 @@
           "date": "2018-07-20T21:38:24Z",
           "userName": "darkmoon980",
           "issueNumber": 30714,
+          "arch32": false
+        },
+        {
+          "status": "working",
+          "device": "iPhone7,2",
+          "issues": "",
+          "date": "2018-07-22T15:37:26Z",
+          "userName": "Shengheer",
+          "issueNumber": 32101,
           "arch32": false
         }
       ]
