--- a/docs/json/packages/com.cokepokes.appstoreplusplus.json
+++ b/docs/json/packages/com.cokepokes.appstoreplusplus.json
@@ -17,10 +17,10 @@
       "date": "2018-07-23T02:27:18Z",
       "outcome": {
         "calculatedStatus": "Likely working",
-        "percentage": 66,
-        "good": 2,
+        "percentage": 75,
+        "good": 3,
         "bad": 0,
-        "total": 3,
+        "total": 4,
         "arch32": {
           "total": 0,
           "good": 0,
@@ -55,6 +55,15 @@
           "date": "2018-07-22T15:55:47Z",
           "userName": "sudeep-08",
           "issueNumber": 32121,
+          "arch32": false
+        },
+        {
+          "status": "working",
+          "device": "iPhone10,6",
+          "issues": "",
+          "date": "2018-07-22T15:30:02Z",
+          "userName": "dwanejohnsonrock",
+          "issueNumber": 32098,
           "arch32": false
         }
       ]
