--- a/docs/json/packages/com.unlimapps.uaupdatetools.json
+++ b/docs/json/packages/com.unlimapps.uaupdatetools.json
@@ -980,9 +980,9 @@
       "outcome": {
         "calculatedStatus": "Working",
         "percentage": 100,
-        "good": 8,
+        "good": 9,
         "bad": 0,
-        "total": 8,
+        "total": 9,
         "arch32": {
           "total": 0,
           "good": 0,
@@ -1062,6 +1062,15 @@
           "date": "2018-07-22T15:39:55Z",
           "userName": "useplusa",
           "issueNumber": 32102,
+          "arch32": false
+        },
+        {
+          "status": "working",
+          "device": "iPhone10,3",
+          "issues": "",
+          "date": "2018-07-22T15:29:39Z",
+          "userName": "nigrr",
+          "issueNumber": 32097,
           "arch32": false
         }
       ]
