--- a/docs/json/packages/com.cokepokes.appstoreplusplus.json
+++ b/docs/json/packages/com.cokepokes.appstoreplusplus.json
@@ -1,7 +1,7 @@
 {
   "id": "com.cokepokes.appstoreplusplus",
   "name": "AppStore++",
-  "latest": "0.4",
+  "latest": "0.3",
   "repository": "cokepokes.github.io",
   "url": "http://cydia.saurik.com/package/com.cokepokes.appstoreplusplus/",
   "shortDescription": "Allows you to downgrade/upgrade apps in the AppStore on iOS 11.",
@@ -126,6 +126,37 @@
           "date": "2018-07-22T16:07:15Z",
           "userName": "qu4rk",
           "issueNumber": 32129,
+          "arch32": false
+        }
+      ]
+    },
+    {
+      "tweakVersion": "0.3",
+      "iOSVersion": "11.3.1",
+      "repository": "cokepokes.github.io",
+      "date": "2018-07-22T14:59:33Z",
+      "outcome": {
+        "calculatedStatus": "Working",
+        "percentage": 100,
+        "good": 1,
+        "bad": 0,
+        "total": 1,
+        "arch32": {
+          "total": 0,
+          "good": 0,
+          "bad": 0,
+          "percentage": 0,
+          "calculatedStatus": "Unknown"
+        }
+      },
+      "users": [
+        {
+          "status": "working",
+          "device": "iPhone8,4",
+          "issues": "",
+          "date": "2018-07-22T14:59:33Z",
+          "userName": "viggou",
+          "issueNumber": 32087,
           "arch32": false
         }
       ]
