--- a/docs/json/packages/com.joshuaseltzer.advancedsettings8.json
+++ b/docs/json/packages/com.joshuaseltzer.advancedsettings8.json
@@ -40,6 +40,37 @@
           "arch32": true
         }
       ]
+    },
+    {
+      "tweakVersion": "1.1.0",
+      "iOSVersion": "11.3.1",
+      "repository": "BigBoss",
+      "date": "2018-07-22T14:58:14Z",
+      "outcome": {
+        "calculatedStatus": "Not working",
+        "percentage": 0,
+        "good": 0,
+        "bad": 0,
+        "total": 1,
+        "arch32": {
+          "total": 0,
+          "good": 0,
+          "bad": 0,
+          "percentage": 0,
+          "calculatedStatus": "Unknown"
+        }
+      },
+      "users": [
+        {
+          "status": "not working",
+          "device": "iPhone9,3",
+          "issues": "",
+          "date": "2018-07-22T14:58:14Z",
+          "userName": "ModGang420",
+          "issueNumber": 32086,
+          "arch32": false
+        }
+      ]
     }
   ]
 }
