--- a/docs/json/packages/com.unlimapps.uaupdatetools.json
+++ b/docs/json/packages/com.unlimapps.uaupdatetools.json
@@ -1074,6 +1074,37 @@
           "arch32": false
         }
       ]
+    },
+    {
+      "tweakVersion": "1.0r-88",
+      "iOSVersion": "11.2.5",
+      "repository": "test.unlimapps.com",
+      "date": "2018-07-22T14:48:30Z",
+      "outcome": {
+        "calculatedStatus": "Working",
+        "percentage": 100,
+        "good": 1,
+        "bad": 0,
+        "total": 1,
+        "arch32": {
+          "total": 0,
+          "good": 0,
+          "bad": 0,
+          "percentage": 0,
+          "calculatedStatus": "Unknown"
+        }
+      },
+      "users": [
+        {
+          "status": "working",
+          "device": "iPhone9,3",
+          "issues": "",
+          "date": "2018-07-22T14:48:30Z",
+          "userName": "LordDan765",
+          "issueNumber": 32075,
+          "arch32": false
+        }
+      ]
     }
   ]
 }
