--- a/docs/json/packages/com.cokepokes.appstoreplusplus.json
+++ b/docs/json/packages/com.cokepokes.appstoreplusplus.json
@@ -1,7 +1,7 @@
 {
   "id": "com.cokepokes.appstoreplusplus",
   "name": "AppStore++",
-  "latest": "0.3",
+  "latest": "0.4",
   "repository": "cokepokes.github.io",
   "url": "http://cydia.saurik.com/package/com.cokepokes.appstoreplusplus/",
   "shortDescription": "Allows you to downgrade/upgrade apps in the AppStore on iOS 11.",
@@ -16,11 +16,11 @@
       "repository": "cokepokes.github.io",
       "date": "2018-07-23T02:27:18Z",
       "outcome": {
-        "calculatedStatus": "Likely working",
-        "percentage": 75,
-        "good": 3,
+        "calculatedStatus": "Working",
+        "percentage": 80,
+        "good": 4,
         "bad": 0,
-        "total": 4,
+        "total": 5,
         "arch32": {
           "total": 0,
           "good": 0,
@@ -64,6 +64,15 @@
           "date": "2018-07-22T15:30:02Z",
           "userName": "dwanejohnsonrock",
           "issueNumber": 32098,
+          "arch32": false
+        },
+        {
+          "status": "working",
+          "device": "iPhone7,2",
+          "issues": "",
+          "date": "2018-07-22T13:57:30Z",
+          "userName": "sofianalmashahdy",
+          "issueNumber": 32061,
           "arch32": false
         }
       ]
