--- a/docs/json/packages/com.unlimapps.uaupdatetools.json
+++ b/docs/json/packages/com.unlimapps.uaupdatetools.json
@@ -980,9 +980,9 @@
       "outcome": {
         "calculatedStatus": "Working",
         "percentage": 100,
-        "good": 9,
+        "good": 10,
         "bad": 0,
-        "total": 9,
+        "total": 10,
         "arch32": {
           "total": 0,
           "good": 0,
@@ -1071,6 +1071,15 @@
           "date": "2018-07-22T15:29:39Z",
           "userName": "nigrr",
           "issueNumber": 32097,
+          "arch32": false
+        },
+        {
+          "status": "working",
+          "device": "iPhone7,2",
+          "issues": "",
+          "date": "2018-07-22T13:40:10Z",
+          "userName": "sadalhayat",
+          "issueNumber": 32056,
           "arch32": false
         }
       ]
