--- a/docs/json/packages/com.cokepokes.appstoreplusplus.json
+++ b/docs/json/packages/com.cokepokes.appstoreplusplus.json
@@ -178,6 +178,37 @@
           "arch32": false
         }
       ]
+    },
+    {
+      "tweakVersion": "0.4",
+      "iOSVersion": "11.2.5",
+      "repository": "CokePokes",
+      "date": "2018-07-22T12:14:33Z",
+      "outcome": {
+        "calculatedStatus": "Not working",
+        "percentage": 0,
+        "good": 0,
+        "bad": 0,
+        "total": 1,
+        "arch32": {
+          "total": 0,
+          "good": 0,
+          "bad": 0,
+          "percentage": 0,
+          "calculatedStatus": "Unknown"
+        }
+      },
+      "users": [
+        {
+          "status": "not working",
+          "device": "iPhone8,1",
+          "issues": "",
+          "date": "2018-07-22T12:14:33Z",
+          "userName": "alicans",
+          "issueNumber": 32017,
+          "arch32": false
+        }
+      ]
     }
   ]
 }
