--- a/docs/json/packages/com.unlimapps.uaupdatetools.json
+++ b/docs/json/packages/com.unlimapps.uaupdatetools.json
@@ -980,9 +980,9 @@
       "outcome": {
         "calculatedStatus": "Working",
         "percentage": 100,
-        "good": 10,
+        "good": 11,
         "bad": 0,
-        "total": 10,
+        "total": 11,
         "arch32": {
           "total": 0,
           "good": 0,
@@ -1080,6 +1080,15 @@
           "date": "2018-07-22T13:40:10Z",
           "userName": "sadalhayat",
           "issueNumber": 32056,
+          "arch32": false
+        },
+        {
+          "status": "working",
+          "device": "iPhone10,2",
+          "issues": "Looking forward to block updates function",
+          "date": "2018-07-22T12:11:42Z",
+          "userName": "Squiddley",
+          "issueNumber": 32016,
           "arch32": false
         }
       ]
