--- a/docs/json/packages/com.cokepokes.appstoreplusplus.json
+++ b/docs/json/packages/com.cokepokes.appstoreplusplus.json
@@ -17,10 +17,10 @@
       "date": "2018-07-23T02:27:18Z",
       "outcome": {
         "calculatedStatus": "Working",
-        "percentage": 83,
-        "good": 5,
+        "percentage": 85,
+        "good": 6,
         "bad": 0,
-        "total": 6,
+        "total": 7,
         "arch32": {
           "total": 0,
           "good": 0,
@@ -82,6 +82,15 @@
           "date": "2018-07-22T13:34:23Z",
           "userName": "tjwolf35",
           "issueNumber": 32051,
+          "arch32": false
+        },
+        {
+          "status": "working",
+          "device": "iPhone10,6",
+          "issues": "",
+          "date": "2018-07-22T11:34:54Z",
+          "userName": "Andy4007",
+          "issueNumber": 32008,
           "arch32": false
         }
       ]
