--- a/docs/json/packages/com.cokepokes.appstoreplusplus.json
+++ b/docs/json/packages/com.cokepokes.appstoreplusplus.json
@@ -17,10 +17,10 @@
       "date": "2018-07-23T02:27:18Z",
       "outcome": {
         "calculatedStatus": "Working",
-        "percentage": 85,
-        "good": 6,
+        "percentage": 87,
+        "good": 7,
         "bad": 0,
-        "total": 7,
+        "total": 8,
         "arch32": {
           "total": 0,
           "good": 0,
@@ -91,6 +91,15 @@
           "date": "2018-07-22T11:34:54Z",
           "userName": "Andy4007",
           "issueNumber": 32008,
+          "arch32": false
+        },
+        {
+          "status": "working",
+          "device": "iPhone10,6",
+          "issues": "",
+          "date": "2018-07-22T09:45:39Z",
+          "userName": "noahfrag",
+          "issueNumber": 31970,
           "arch32": false
         }
       ]
