--- a/docs/json/packages/com.cokepokes.appstoreplusplus.json
+++ b/docs/json/packages/com.cokepokes.appstoreplusplus.json
@@ -227,6 +227,37 @@
           "arch32": false
         }
       ]
+    },
+    {
+      "tweakVersion": "0.4",
+      "iOSVersion": "11.2.1",
+      "repository": "cokepokes.github.io",
+      "date": "2018-07-22T09:24:19Z",
+      "outcome": {
+        "calculatedStatus": "Working",
+        "percentage": 100,
+        "good": 1,
+        "bad": 0,
+        "total": 1,
+        "arch32": {
+          "total": 0,
+          "good": 0,
+          "bad": 0,
+          "percentage": 0,
+          "calculatedStatus": "Unknown"
+        }
+      },
+      "users": [
+        {
+          "status": "partial",
+          "device": "iPhone9,4",
+          "issues": "",
+          "date": "2018-07-22T09:24:19Z",
+          "userName": "RafaRazy",
+          "issueNumber": 31964,
+          "arch32": false
+        }
+      ]
     }
   ]
 }
