--- a/docs/json/packages/org.thebigboss.applanguageswitcher.json
+++ b/docs/json/packages/org.thebigboss.applanguageswitcher.json
@@ -118,9 +118,9 @@
       "outcome": {
         "calculatedStatus": "Working",
         "percentage": 100,
-        "good": 2,
+        "good": 3,
         "bad": 0,
-        "total": 2,
+        "total": 3,
         "arch32": {
           "total": 0,
           "good": 0,
@@ -146,6 +146,15 @@
           "date": "2018-07-08T08:43:04Z",
           "userName": "tonyunreal",
           "issueNumber": 15609,
+          "arch32": false
+        },
+        {
+          "status": "working",
+          "device": "iPhone9,4",
+          "issues": "",
+          "date": "2018-07-22T08:40:51Z",
+          "userName": "TheNoim",
+          "issueNumber": 31952,
           "arch32": false
         }
       ]
