--- a/docs/json/packages/com.imkpatil.letmeknow.json
+++ b/docs/json/packages/com.imkpatil.letmeknow.json
@@ -4,7 +4,7 @@
   "latest": "1.3",
   "repository": "BigBoss",
   "url": "http://cydia.saurik.com/package/com.imkpatil.letmeknow/",
-  "shortDescription": "This tweak will let you know exactly when the call connects/disconnects so that you don't have to keep holding!",
+  "shortDescription": "play vibration when call connect/disconnect",
   "category": "Tweaks",
   "author": "Kiran Patil",
   "commercial": false,
@@ -728,6 +728,37 @@
           "date": "2018-07-22T21:16:05Z",
           "userName": "burkybang",
           "issueNumber": 32307,
+          "arch32": false
+        }
+      ]
+    },
+    {
+      "tweakVersion": "1.3",
+      "iOSVersion": "11.3",
+      "repository": "BigBoss",
+      "date": "2018-07-22T08:12:29Z",
+      "outcome": {
+        "calculatedStatus": "Working",
+        "percentage": 100,
+        "good": 1,
+        "bad": 0,
+        "total": 1,
+        "arch32": {
+          "total": 0,
+          "good": 0,
+          "bad": 0,
+          "percentage": 0,
+          "calculatedStatus": "Unknown"
+        }
+      },
+      "users": [
+        {
+          "status": "working",
+          "device": "iPhone10,6",
+          "issues": "",
+          "date": "2018-07-22T08:12:29Z",
+          "userName": "Muranx",
+          "issueNumber": 31930,
           "arch32": false
         }
       ]
