--- a/docs/json/packages/com.julioverne.appstoreunrestrict.json
+++ b/docs/json/packages/com.julioverne.appstoreunrestrict.json
@@ -17,10 +17,10 @@
       "date": "2018-07-07T00:33:41Z",
       "outcome": {
         "calculatedStatus": "Likely working",
-        "percentage": 61,
+        "percentage": 57,
         "good": 11,
         "bad": 0,
-        "total": 18,
+        "total": 19,
         "arch32": {
           "total": 0,
           "good": 0,
@@ -190,6 +190,15 @@
           "date": "2018-07-17T17:36:01Z",
           "userName": "punyapal",
           "issueNumber": 28864,
+          "arch32": false
+        },
+        {
+          "status": "not working",
+          "device": "iPhone8,1",
+          "issues": "",
+          "date": "2018-07-22T08:05:15Z",
+          "userName": "yogindr",
+          "issueNumber": 31899,
           "arch32": false
         }
       ]
