--- a/docs/json/packages/info.adolfoi.rapidfiretappro.json
+++ b/docs/json/packages/info.adolfoi.rapidfiretappro.json
@@ -1,7 +1,7 @@
 {
   "id": "info.adolfoi.rapidfiretappro",
   "name": "RapidfireTap",
-  "latest": "1.5.0-5",
+  "latest": "1.8.0-8",
   "repository": "Packix",
   "url": "http://cydia.saurik.com/package/info.adolfoi.rapidfiretappro/",
   "shortDescription": "Auto Tapping using virtual buttons",
@@ -95,6 +95,37 @@
           "date": "2018-07-21T02:33:29Z",
           "userName": "Galfinite",
           "issueNumber": 30885,
+          "arch32": false
+        }
+      ]
+    },
+    {
+      "tweakVersion": "1.8.0-8",
+      "iOSVersion": "11.3.1",
+      "repository": "Packix",
+      "date": "2018-07-22T08:00:06Z",
+      "outcome": {
+        "calculatedStatus": "Working",
+        "percentage": 100,
+        "good": 1,
+        "bad": 0,
+        "total": 1,
+        "arch32": {
+          "total": 0,
+          "good": 0,
+          "bad": 0,
+          "percentage": 0,
+          "calculatedStatus": "Unknown"
+        }
+      },
+      "users": [
+        {
+          "status": "working",
+          "device": "iPhone7,2",
+          "issues": "",
+          "date": "2018-07-22T08:00:06Z",
+          "userName": "Galfinite",
+          "issueNumber": 31886,
           "arch32": false
         }
       ]
