--- a/docs/json/packages/com.cokepokes.appstoreplusplus.json
+++ b/docs/json/packages/com.cokepokes.appstoreplusplus.json
@@ -17,10 +17,10 @@
       "date": "2018-07-23T02:27:18Z",
       "outcome": {
         "calculatedStatus": "Working",
-        "percentage": 87,
-        "good": 7,
+        "percentage": 88,
+        "good": 8,
         "bad": 0,
-        "total": 8,
+        "total": 9,
         "arch32": {
           "total": 0,
           "good": 0,
@@ -100,6 +100,15 @@
           "date": "2018-07-22T09:45:39Z",
           "userName": "noahfrag",
           "issueNumber": 31970,
+          "arch32": false
+        },
+        {
+          "status": "working",
+          "device": "iPhone7,2",
+          "issues": "",
+          "date": "2018-07-22T07:59:43Z",
+          "userName": "Galfinite",
+          "issueNumber": 31884,
           "arch32": false
         }
       ]
