--- a/docs/json/packages/com.unlimapps.uaupdatetools.json
+++ b/docs/json/packages/com.unlimapps.uaupdatetools.json
@@ -980,9 +980,9 @@
       "outcome": {
         "calculatedStatus": "Working",
         "percentage": 100,
-        "good": 11,
+        "good": 12,
         "bad": 0,
-        "total": 11,
+        "total": 12,
         "arch32": {
           "total": 0,
           "good": 0,
@@ -1089,6 +1089,15 @@
           "date": "2018-07-22T12:11:42Z",
           "userName": "Squiddley",
           "issueNumber": 32016,
+          "arch32": false
+        },
+        {
+          "status": "working",
+          "device": "iPhone10,3",
+          "issues": "",
+          "date": "2018-07-22T07:26:06Z",
+          "userName": "fungmok",
+          "issueNumber": 31870,
           "arch32": false
         }
       ]
