--- a/docs/json/packages/com.jakeashacks.activatorfix.json
+++ b/docs/json/packages/com.jakeashacks.activatorfix.json
@@ -17,10 +17,10 @@
       "date": "2018-07-16T04:04:45Z",
       "outcome": {
         "calculatedStatus": "Not working",
-        "percentage": 20,
-        "good": 1,
+        "percentage": 33,
+        "good": 2,
         "bad": 0,
-        "total": 5,
+        "total": 6,
         "arch32": {
           "total": 0,
           "good": 0,
@@ -73,6 +73,15 @@
           "date": "2018-07-18T15:13:15Z",
           "userName": "swang530",
           "issueNumber": 29308,
+          "arch32": false
+        },
+        {
+          "status": "working",
+          "device": "iPhone9,2",
+          "issues": "",
+          "date": "2018-07-22T07:14:40Z",
+          "userName": "afeekh",
+          "issueNumber": 31869,
           "arch32": false
         }
       ]
