--- a/docs/json/packages/com.cokepokes.appstoreplusplus.json
+++ b/docs/json/packages/com.cokepokes.appstoreplusplus.json
@@ -17,10 +17,10 @@
       "date": "2018-07-23T02:27:18Z",
       "outcome": {
         "calculatedStatus": "Working",
-        "percentage": 88,
-        "good": 8,
+        "percentage": 90,
+        "good": 9,
         "bad": 0,
-        "total": 9,
+        "total": 10,
         "arch32": {
           "total": 0,
           "good": 0,
@@ -109,6 +109,15 @@
           "date": "2018-07-22T07:59:43Z",
           "userName": "Galfinite",
           "issueNumber": 31884,
+          "arch32": false
+        },
+        {
+          "status": "working",
+          "device": "iPhone9,3",
+          "issues": "",
+          "date": "2018-07-22T06:55:03Z",
+          "userName": "Laizrod",
+          "issueNumber": 31864,
           "arch32": false
         }
       ]
