--- a/docs/json/packages/com.unlimapps.uaupdatetools.json
+++ b/docs/json/packages/com.unlimapps.uaupdatetools.json
@@ -980,9 +980,9 @@
       "outcome": {
         "calculatedStatus": "Working",
         "percentage": 100,
-        "good": 12,
+        "good": 13,
         "bad": 0,
-        "total": 12,
+        "total": 13,
         "arch32": {
           "total": 0,
           "good": 0,
@@ -1098,6 +1098,15 @@
           "date": "2018-07-22T07:26:06Z",
           "userName": "fungmok",
           "issueNumber": 31870,
+          "arch32": false
+        },
+        {
+          "status": "working",
+          "device": "iPhone10,6",
+          "issues": "",
+          "date": "2018-07-22T06:40:42Z",
+          "userName": "jackerfrost",
+          "issueNumber": 31859,
           "arch32": false
         }
       ]
